  - moved cURL and LDAP CRL download code out of pluto [Andrew]
  - replaced CRL thread with libevent [Andrew]
  - fixed `ipsec checkcrls` [Andrew]
  - when configured, use cURL to download LDAP CRLs [Andrew]
  - verify using NSS's IPsec profile aka certificateUsageIPsec [Andrew]
  - only verify using certificateUsageSSL{Client,Server} when USE_NSS_TLS_SECURITY_PROFILE [Andrew]
* ipsec commands:
  - support qualified names, such as '"labeled"[1][2]' [Andrew #1308]
* initsystem:
  - remove unused _stackmanager [Tuomo #2080]
* Testing:
  - eliminated all pyOpenSSL dependencies [Andrew]
  - review PKIX test coverage [Andrew]

v5.2 (Feb 26, 2025)
* IKEv2:
  - add PPK in INTERMEDIATE exchange, draft-ietf-ipsecme-ikev2-qr-alt-04 [Vukasin]
  - add initial support for RFC 5723 IKE_SESSION_RESUME [Nupur Agrawal, Andrew]
  - fix crash in <<ipsec rereadsecrets>> [Andrew, Ilya Maximets #1894]
  - fix bogus ERROR when deleting connection [Andrew, Ilya Maximets #1914]
* IPsec Interface:
  - add support on FreeBSD, NetBSD and OpenBSD [Andrew]
  - add ipsec-interface-managed=no for namespaces [Andrew]
* IKEv1:
  - removed compile-time SOFTREMOTE_CLIENT_WORKAROUND [Andrew]
  - fix INVALID_ID_INFORMATION response using corrupt IV [Andrew #1830]
  - fix reconnect with addresspool after restart [Andrew #1790]
  - fix padding of modecfg payloads [Andrew wmasilva #2023]
  - update ikepad= to allow {yes,no,auto} [Andrew]
* Linux:
  - packet offload counters supported in 6.7+ [Paul]
  - Add IPTFS support (RFC 9347) [Paul / Antony / Andrew]
  - 6.10+ need replay-window 0 on OUTBOUND SA [Paul]
  - Do not set nopmtudisc on inbound SA [Paul]
  - Set DSCP options only on the relevant direction SA [Paul]
* updown:
  - Use half-routes for IPv6 to cover whole address space #1994 [Tuomo]
  - Use sourceip= for all remote subnets when set [Tuomo]
* whack/addconn:
  - fix "duplicated flag ctlsocket" regression in 5.0 #1840 [Andrew, Ilya Maximets #1840]