@@ -15,6 +15,8 @@ v5.3 (unreleased)
   - when configured, use cURL to download LDAP CRLs [Andrew]
   - verify using NSS's IPsec profile aka certificateUsageIPsec [Andrew]
   - only verify using certificateUsageSSL{Client,Server} when USE_NSS_TLS_SECURITY_PROFILE [Andrew]
+* IKEv1:
+  - share-lease=yes|no (default yes) to share XAUTH/ModeCfg lease IP on multiple connections [Paul]
 * ipsec commands:
   - support qualified names, such as '"labeled"[1][2]' [Andrew #1308]
 * initsystem:
